fixed: update oribitring collasion with header on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -887,14 +887,14 @@ body.light-mode .header {
     }
     .hero-content {
         margin-top: 0;
-        padding-top: 3.5rem;
+        padding-top: 5rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
     }
     .profile-photo {
-        margin-top: 3.5rem;
+        margin-top: 6rem;
         margin-bottom: 2.5rem;
         width: 140px;
         height: 90px;
